New HTTP Client: Finished integration, steered by version attribute